<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7C64BFFB"
    android:orientation="vertical"
    tools:context="com.iesmurgi.noteapp.EditarNotaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="476dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/editarTituloNotaTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_tv" />

        <TextView
            android:id="@+id/tituloNotaTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/editarContenidoNotaTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_tv" />

        <EditText
            android:id="@+id/editarContenidoNotaEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/contenido_hint"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:scrollbars="vertical" />

        <Switch
            android:id="@+id/editarVenceNotaSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vence_tv" />

        <TextView
            android:id="@+id/editarfechaHoraTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_vencimiento_tv" />

        <TextView
            android:id="@+id/editarFechaNotaTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:visibility="invisible" />

        <Button
            android:id="@+id/editarFechaBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="#7C64BFFB"
            android:text="@string/seleccionar_fecha_btn"
            android:textColor="@color/white"
            app:cornerRadius="50dp" />

        <TextView
            android:id="@+id/editarCategoriaTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoria_tv" />

        <Spinner
            android:id="@+id/editarCategoriaNotaSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg"
            android:visibility="visible" />

    </LinearLayout>

    <Button
        android:id="@+id/editarNotaBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/guardar_btn"
        android:textColor="@color/black"
        app:cornerRadius="50dp" />
</LinearLayout>